# path-tracer

./: .gitignore  CMakeLists.txt  README.md  bsdf.h  camera.cpp  camera.h  conanfile.txt  figures.h  hitinfo.cpp  hitinfo.h  main.cpp  materials.h  nrandom.cpp  nrandom.h  render.cpp  render.h  sdfkajld.txt  search.cpp  search.h  skybox.cpp
include/PathTracer/: bsdf.hpp  bsp.hpp  camera.hpp  figures.hpp  frandom.hpp  hit.hpp  material.hpp  pathtracer.hpp  pch.hpp  ray.hpp  render.hpp  scene.hpp  skybox.hpp  threadpool.hpp
lib/: aabb.hpp  bsdf.hpp  bsp.hpp  bvh.hpp  camera.cpp  camera.hpp  figures.cpp  figures.hpp  frandom.cpp  frandom.hpp  hit.hpp  material.hpp  ray.hpp  render.cpp  render.hpp  scene.cpp  scene.hpp  skybox.cpp  skybox.hpp  tracer.hpp
perf/: CMakeLists.txt  main.cpp
src/: camera.cpp  camera.h  figures.cpp  frandom.cpp  hit.cpp  main.cpp  materials.cpp  nrandom.cpp  nrandom.h  render.cpp  scene.cpp  search.h  skybox.cpp  skybox.h  threadpool.cpp  threadpool.h
